# soundex

./: .travis.yml  Makefile  README.md  README.rst  __init__.py  requirements.txt  setup.cfg  setup.py  soundex.py  tox.ini
libindic/soundex/: __init__.py
libindic/soundex/templates/: libindic.soundex.html  soundex.html
libindic/soundex/tests/: test_soundex.py
soundex/: __init__.py  charmap.py  core.py  soundex.py
soundex/templates/: soundex.html
soundex/tests/: test_soundex.py
tests/: test_soundex.py
