[metadata]
name = soundex
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
summary = Soundex algorith implementation for English and Indian languages
license = LGPL-2.1+
description-file =
  README.rst
home-page = https://github.com/Project-SILPA/soundex
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
packages =
 soundex
