[metadata]
name = libindic-soundex
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
summary = Soundex algorithm implementation for English and Indian languages
license = LGPL-2.1+
long_description = file: README.rst
home-page = https://github.com/libindic/soundex
requires-python = >=3.0
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python
[options]
include_package_data = True

[entry_points]
libindic.api.rest =
    soundex_compare = soundex:expose_compare
    soundex_soundex = soundex:expose_soundex

[options.package_data]
*=templates/libindic.soundex.html

